--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-    email = name@email.com
-    name = Foo Bar
+    email = superhero@gmail.com
+    name = Super Hero
 [alias]
     co = checkout
     br = branch
@@ -12,6 +12,7 @@
     rd = push origin --delete
     rb = rebase -i origin/master
     li = ls-files --other --ignored --exclude-standard  # list ignored files
+    ls = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate
 [push]
     default = simple
 [color]
