--- a/tmux.conf
+++ b/tmux.conf
@@ -1,24 +1,22 @@
 # vim-tmux-navigator: move between vim split and tmux pane seamlessly
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# prefix + [hjkl] to resize pane, need prefix
-bind -r ^k resizep -U 10
-bind -r ^j resizep -D 10
-bind -r ^h resizep -L 10
-bind -r ^l resizep -R 10
+# prefix + [hjkl] to resize pane
+bind -r C-k resizep -U 10
+bind -r C-j resizep -D 10
+bind -r C-h resizep -L 10
+bind -r C-l resizep -R 10
 
-# Getting interesting now, we use the vertical and horizontal
-# symbols to split the screen
 bind | split-window -h
 bind - split-window -v
 
 # use mouse to select or copy
-set -g mouse on
+# set -g mouse on
 
 # Use vim keybindings in copy mode
 # Ctrl b [ to enter copy mode
@@ -27,9 +25,9 @@ set -g mouse on
 # Ctrl b ] to paste (p in vim)
 set -g mode-keys vi
 # start selecting text typing 'v' key (once you are in copy mode)
-bind-key -t vi-copy 'v' begin-selection
+bind -t vi-copy 'v' begin-selection
 # copy selected text to the system's clipboard
-bind-key -t vi-copy 'y' copy-selection
+bind -t vi-copy 'y' copy-selection
 
 # set fish as your default Tmux shell
 # You need to install fish and make sure the path is right for you
@@ -44,3 +42,4 @@ set -sg escape-time 1
 # Allow us to reload our Tmux configuration while using Tmux
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+source "/usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf"
