improve for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,7 +31,7 @@ bind -t vi-copy 'y' copy-selection
 
 # set fish as your default Tmux shell
 # You need to install fish and make sure the path is right for you
-set-option -g default-shell /usr/bin/fish
+set-option -g default-shell /usr/bin/zsh
 
 # Tmux should be pretty, we need 256 color for that
 set -g default-terminal "screen-256color"
