fix vim copy and paste in tmux on mac

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,7 +34,10 @@ bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
 # set your default Tmux shell
-set-option -g default-shell /usr/bin/zsh
+# set-option -g default-shell /usr/bin/zsh
+
+set -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 # Tmux should be pretty, we need 256 color for that
 set -g default-terminal "screen-256color"
