--- a/tmux.conf
+++ b/tmux.conf
@@ -15,36 +15,14 @@ bind -r C-l resizep -R 10
 bind | split-window -h
 bind - split-window -v
 
-# Start windows and panes at 1, not 0
-set -g base-index 1
-setw -g pane-base-index 1
+# Allow us to reload our Tmux configuration while using Tmux
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# use mouse to select or copy
-# set -g mouse on
-
-# Use vim keybindings in copy mode
-# Ctrl b [ to enter copy mode
-# hjkl to move
-# v to begin select, y to copy (default is space and enter)
-# Ctrl b ] to paste (p in vim)
 set -g mode-keys vi
-# start selecting text typing 'v' key (once you are in copy mode)
-bind -t vi-copy 'v' begin-selection
-# copy selected text to the system's clipboard
-bind -t vi-copy 'y' copy-selection
 
-# set your default Tmux shell
-# set-option -g default-shell /usr/bin/zsh
-
-set -g default-shell $SHELL
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
-
-# Tmux should be pretty, we need 256 color for that
 set -g default-terminal "screen-256color"
 
 # command delay? We don't want that, make it short
 set -sg escape-time 1
 
-# Allow us to reload our Tmux configuration while using Tmux
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
+# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
