--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,9 @@ bind -r C-l resizep -R 10
 bind | split-window -h
 bind - split-window -v
 
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
+
 # Allow us to reload our Tmux configuration while using Tmux
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
