--- a/tmux.conf
+++ b/tmux.conf
@@ -15,17 +15,12 @@ bind -r C-l resizep -R 10
 bind | split-window -h
 bind - split-window -v
 
-set-option -g base-index 1
-set-window-option -g pane-base-index 1
+set -g base-index 1
+setw -g pane-base-index 1
+
+set -g mode-keys vi
+set -g default-terminal "screen-256color"
 
 # Allow us to reload our Tmux configuration while using Tmux
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-set -g mode-keys vi
-
-set -g default-terminal "screen-256color"
-
-# command delay? We don't want that, make it short
-set -sg escape-time 1
-
-# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
