ansible/main.yml: call vim-deps.yml
Signed-off-by: Guo Qiao <guoqiao@gmail.com>

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -1,6 +1,7 @@
 #!/usr/bin/env ansible-playbook
 ---
 
+- import_playbook: vim-deps.yml
 - import_playbook: vim-build.yml
 # - import_playbook: vim-vundle.yml
 - import_playbook: vim-plug.yml
