ansible/vim-build.yml: add libncurses-dev
Signed-off-by: Guo Qiao <guoqiao@gmail.com>

--- a/ansible/vim-build.yml
+++ b/ansible/vim-build.yml
@@ -18,6 +18,7 @@
         - exuberant-ctags  # for tagbar
         - silversearcher-ag  # ag and ctrlp
         - shellcheck  # help to check shell script
+        - libncurses-dev  # required to build vim
 
     - name: get latest vim code
       git:
