--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -1,5 +1,6 @@
 #!/usr/bin/env ansible-playbook
 ---
 
+- import_playbook: font-install.yml
 - import_playbook: vim-build.yml
 - import_playbook: vim-plug.yml
