ansible: localhost only
Signed-off-by: Joe Guo <guoqiao@gmail.com>

--- a/ansible/vim-build.yml
+++ b/ansible/vim-build.yml
@@ -3,7 +3,7 @@
 # vim:ff=unix ts=2 sw=2 ai expandtab
 
 - name: build vim from source code
-  hosts: vim
+  hosts: localhost
   tasks:
 
     - name: enable deb-src in sources.list
