font-install.yml: fix fonts path
Signed-off-by: Joe Guo <joe.guo@canonical.com>

--- a/font-install.yml
+++ b/font-install.yml
@@ -1,12 +1,11 @@
 #!/usr/bin/env ansible-playbook
 ---
-# vim:ff=unix ts=2 sw=2 ai expandtab
 
-- hosts: vim
+- hosts: localhost
   tasks:
     - name: find all fonts
       find:
-        paths: ../fonts/
+        paths: fonts/
         recurse: yes
       register: find_result
 
