--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
-ansible_lint
+pip
+ipython
 bandit
 black
 flake8
 jedi
-pip
 pyflakes
 pylint
 #install error
 #pyre
 python-lsp-server
-pynvim
 pyright
+
+pynvim
+
+# yaml
 pyyaml
 yamllint
+ansible_lint
